third_party/vendor/rustversion-1.0.5/tests/ui/bad-not.stderr
error: expected `(` after `not`
 --> $DIR/bad-not.rs:1:20
  |
1 | #[rustversion::any(not)]
  |                    ^^^

error: expected `(`
 --> $DIR/bad-not.rs:4:23
  |
4 | #[rustversion::any(not, not)]
  |                       ^
